# Ambiguity---Aware-Driver-State-Recognition-Using-Multimodal-Sensing-and-LLM-Based-Reasoning

./: .gitignore  README.md  generate_audio.py  main.py
drowsiness_detection_msg/: CMakeLists.txt  package.xml
drowsiness_detection_msg/msg/: AnnotatorLabels.msg  CombinedAnnotations.msg  DrowsinessMetricsData.msg  EarMarValue.msg  LanePosition.msg  Vibration.msg
drowsiness_detection_msg/srv/: StoreLabels.srv
drowsiness_detection_pkg/: package.xml  setup.cfg  setup.py
drowsiness_detection_pkg/LLM_Reasoning/: integrated_llm_node.py
drowsiness_detection_pkg/drowsiness_detection/: carla_steering_metrics_node.py  main.py
drowsiness_detection_pkg/drowsiness_detection/Evaluation/: data_logger_node.py
drowsiness_detection_pkg/drowsiness_detection/ML_Models/: camera_ml_node.py  carla_ml_node.py  repair_models.py
drowsiness_detection_pkg/drowsiness_detection/VLM/: hybrid_vlm_core.py  hybrid_vlm_node.py
drowsiness_detection_pkg/drowsiness_detection/bot/: bot.py  tools.py  utils.py
drowsiness_detection_pkg/drowsiness_detection/camera/: camera_mediapipe_node.py  utils.py
drowsiness_detection_pkg/drowsiness_detection/carla/: carla_manual_control.py  vehicle_info.py  wheel_config.ini
drowsiness_detection_pkg/launch/: complete_system_launch.py  driver_assistance_launch.py  labelling_tool_launch.py
models/: model_camera_rf.pkl  model_camera_rf_scaler.pkl  model_carla_steering_rf.pkl  model_carla_steering_rf_scaler.pkl
ros-carla-msgs/: CMakeLists.txt
spinnaker_camera_cpp/: CMakeLists.txt  package.xml
spinnaker_camera_cpp/src/: camera_node.cpp
(+10 files in other folders)
